fix what u said+ add a neat animation on mobile font size toggle :)

--- a/src/styles/components/dropdown.module.css
+++ b/src/styles/components/dropdown.module.css
@@ -23,7 +23,7 @@
     left: 0px;
     z-index: 0;
 
-    height: 0px;
+    height: 180px;
     width: 140px;
 
     display: flex;
@@ -31,6 +31,7 @@
     gap: 12px;
 
     padding: 12px;
+    padding-top: 36px;
 
     background-color: rgb(255, 255, 255);
 
@@ -54,17 +55,6 @@
       background-color: rgb(20, 20, 255);
       color: rgb(255, 255, 255);
     }
-  }
-
-  & .dropdown-open {
-    height: 180px;
-    width: 140px;
-
-    padding-top: 36px;
-
-    overflow-x: visible;
-
-    transition: height 0.3s ease;
   }
 }
 
