--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -206,16 +206,6 @@
 
       display: flex;
       align-items: center;
-
-      & .font-size-large {
-        height: 36px;
-        width: 36px;
-      }
-
-      & .font-size-small {
-        height: 24px;
-        width: 24px;
-      }
     }
   }
 }
@@ -354,15 +344,24 @@
   & .font-size-large {
     height: 40px;
     width: 40px;
+
+    transition: height 0.3s ease;
+    transition: width 0.3s ease;
   }
 
   & .font-size-medium {
     height: 32px;
     width: 32px;
+
+    transition: height 0.3s ease;
+    transition: width 0.3s ease;
   }
 
   & .font-size-small {
     height: 24px;
     width: 24px;
+
+    transition: height 0.3s ease;
+    transition: width 0.3s ease;
   }
 }
